--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>E-kitab</title>
+  <!-- css file -->
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- / -->
+  <!-- google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <!-- / -->
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <div class="navLogo">
+        <a href="index.html" class="logo"><img src="" alt="" class="logo">E-kitab</a>
+      </div>
+      <div class="navBar">
+        <ul class="barItem">
+          <li class="bar-li">Home</li>
+          <li class="bar-li"></li>
+          <li class="bar-li">About</li>
+          <li class="bar-li">Contact</li>
+          <li class="bar-li"></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
